@@ -202,6 +202,15 @@ Hostname=Zabbix Server
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
 
+### Option: UnsafeUserParameters
+#	Allow all characters to be passed in arguments to user-defined parameters.
+#	0 - do not allow
+#	1 - allow
+#
+# Mandatory: no
+# Default:
+# UnsafeUserParameters=0
+
 ### Option: UserParameter
 #	User-defined parameter to monitor. There can be several user-defined parameters.
 #	Format: UserParameter=<key>,<shell command>
